# Dune-Taller-de-Programacion-FIUBA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  camino_tests.cpp  client_protocolo.cpp  client_protocolo.h  common_coords.cpp  common_coords.h  common_serializador.cpp  common_serializador.h  ejemplo.cpp  index.md  installer.sh  server_camino.cpp  server_camino.h  server_camino_no_encontrado_exception.cpp  server_camino_no_encontrado_exception.h  server_mapa.cpp  server_mapa.h  server_protocolo.cpp  server_protocolo.h  server_server.cpp  untitled.ui
Editor/: CMakeLists.txt  DuneMapEditor.cpp  DuneMapEditor.h  DuneMapEditor_ui.h  DuneMapEditor_ui.ui  main_editor.cpp  recursos.qrc
Editor/src/src_editor/: DuneEditorDeMapas.h
Editor/src/src_texture_label/: TextureLabel.h  label.ui
SDL/mapa/: CMakeLists.txt  cmd_mover_mapa.cpp  cmd_mover_mapa.h  cola_bloqueante.cpp  cola_bloqueante.h  cola_no_bloqueante.cpp  comando_a_enviar.h  hilo_renderer.cpp  hilo_renderer.h  sdl_edificio.cpp  sdl_edificio.h  sdl_game_loop.cpp  sdl_game_loop.h  sdl_main.cpp  sdl_mapa.cpp  sdl_mapa.h  sdl_mapa_main.cpp
pruebas_mapa/: CMakeLists.txt  config.yaml  pruebas.cpp
src_files/: CMakeLists.txt
src_files/assets/constantes/: atributos_armamento.yaml  atributos_unidades.yaml  client_colores.yaml  client_constantes.yaml  codigos.yaml  codigos_edificios.yaml  server_constantes.yaml
src_files/assets/edificios/: dimensiones.yaml
src_files/assets/maps/: mapa1.yaml  mapa2.yaml  mapa3.yaml  mapa4.yaml  mapa_muestra.yaml  mapa_muestra_nuevo.yaml
src_files/src/: camino_tests.cpp  main_client.cpp  main_editor.cpp  main_server.cpp
src_files/src/src_cliente/: CMakeLists.txt  client_client.cpp  client_client.h  client_main.cpp  client_protocolo.cpp  client_protocolo.h  client_protocolo.yaml  client_serializador.cpp  client_serializador.h  cola_bloqueante.cpp  cola_bloqueante.h  cola_no_bloqueante.h  pix_a_coord.cpp  pix_a_coords.cpp  pix_a_coords.h  sdl_client_main.cpp
src_files/src/src_cliente/client_DTO/: SolicitudDeCreacion.h  SolicitudDeUnion.h  Status.cpp  Status.h  client_DTO.h  dto_cmd_actualizar_puntajes_cliente.h  dto_cmd_crear_edificio.h  dto_cmd_empezar_construccion_edificio.h  dto_cmd_empezar_entrenamiento_unidad.h  dto_cmd_enemigo_despliega_unidad.h  dto_cmd_modificar_energia.h  dto_cmd_modificar_vida_edificio_cliente.h  dto_cmd_modificar_vida_unidad_cliente.h  dto_cmd_mover_unidad.h
src_files/src/src_cliente/client_comandos/: client_comando.cpp  client_comando.h  cmd_actualizar_puntaje.cpp  cmd_actualizar_puntaje.h  cmd_actualizar_tienda_edificios.cpp  cmd_actualizar_tienda_edificios.h  cmd_actualizar_tienda_unidades.cpp  cmd_actualizar_tienda_unidades.h  cmd_click_der_en_mapa.cpp  cmd_click_der_en_mapa.h  cmd_click_en_mapa.cpp  cmd_click_en_mapa.h  cmd_construccion_invalida.cpp  cmd_construccion_invalida.h  cmd_crear_edificio.cpp  cmd_crear_edificio.h  cmd_empezar_construccion_edificio.cpp  cmd_empezar_construccion_edificio.h  cmd_empezar_entrenamiento.cpp  cmd_empezar_entrenamiento.h  cmd_enemigo_despliega_unidad.cpp  cmd_enemigo_despliega_unidad.h  cmd_marcador.cpp  cmd_marcador.h  cmd_modificar_energia.cpp  cmd_modificar_energia.h  cmd_modificar_especia.cpp  cmd_modificar_especia.h  cmd_modificar_vida_edificio.cpp  cmd_modificar_vida_edificio.h  cmd_modificar_vida_unidad.cpp  cmd_modificar_vida_unidad.h  cmd_mover_mapa.cpp  cmd_mover_mapa.h  cmd_mover_unidad.cpp  cmd_mover_unidad.h  cmd_salir.cpp  cmd_salir.h  cmd_terminar_partida.cpp  cmd_terminar_partida.h  (+2 more)
src_files/src/src_cliente/client_renderer/: client_renderer.cpp  client_renderer.h
src_files/src/src_cliente/client_solicitudes/: client_sol_crear_edificio.cpp  client_sol_crear_edificio.h  cliente_solicitud.cpp  cliente_solicitud.h  sol _crear_edificio.cpp  sol_atacar_edificio.cpp  sol_atacar_edificio.h  sol_atacar_unidad.cpp  sol_atacar_unidad.h  sol_comprar_edificio.cpp  sol_comprar_edificio.h  sol_comprar_unidad.cpp  sol_comprar_unidad.h  sol_crear_edificio.h  sol_crear_partida.cpp  sol_crear_partida.h  sol_mover_unidad.cpp  sol_mover_unidad.h  sol_unirse_a_partida.cpp  sol_unirse_a_partida.h
src_files/src/src_cliente/client_thread_reciever/: client_hilo_reciever.cpp  client_hilo_reciever.h
src_files/src/src_cliente/client_thread_renderer/: client_hilo_renderer.cpp  client_hilo_renderer.h
src_files/src/src_cliente/client_thread_sdl/: client_hilo_sdl.cpp  client_hilo_sdl.h  client_sdl_evento.cpp  client_sdl_evento.h
src_files/src/src_cliente/client_thread_sender/: client_hilo_sender.cpp  client_hilo_sender.h
src_files/src/src_cliente/client_world_view/: CMakeCache.txt  Makefile  cmake_install.cmake  sdl_cliente_main  sdl_edificio.cpp  sdl_edificio.h  sdl_jugador.cpp  sdl_jugador.h  (+10 more)
src_files/src/src_common/: common_DTOs.h  common_resolver.cpp  common_resolver.h  common_serializador.cpp  common_serializador.h  common_socket.cpp  common_socket.h  common_socket_error.h
src_files/src/src_editor/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  DuneEditorDeMapas.cpp  DuneEditorDeMapas.h  DuneEditorDeMapasUi.h  DuneEditorDeMapasUi.ui  SelectorDeModoDeEdicion.cpp  SelectorDeModoDeEdicion.h  SelectorDeModoDeEdicionUi.h  SelectorDeModoDeEdicionUi.ui
src_files/src/src_form_creacion/: FormCreacion.cpp  FormCreacion.h  FormCreacion.ui  ui_FormCreacionUi.h
src_files/src/src_form_union/: FormUnion.cpp  FormUnion.h  FormUnion.ui  ui_FormUnionUi.h
src_files/src/src_game/: game.cpp  game.h
src_files/src/src_menu/: MenuDune.cpp  MenuDune.h  ui_MenuUi.h
src_files/src/src_server/: CMakeLists.txt  server_aceptador.cpp  server_aceptador.h  server_camino.cpp  server_camino.h  server_fuera_de_rango_exception.h  server_handler.cpp  server_handler.h  server_jugador.cpp  server_jugador.h  server_lobby.cpp  server_lobby.h  server_main.cpp  server_mapa.cpp  server_mapa.h  server_partida.h  server_partida_empezada.cpp  server_partida_empezada.h  server_protocolo.cpp  server_protocolo.h  server_server.cpp  server_server.h
src_files/tests_para_valgrind/: CMakeLists.txt  qt_main.cpp  sdl_main.cpp
(+327 files in other folders)
